UPS-2063: Fix alignment of coloured dot in table.

--- a/app/styles/components/_statistics.scss
+++ b/app/styles/components/_statistics.scss
@@ -70,7 +70,7 @@ $graph-link-color: #337ab7;
     text-align: left;
     font-weight: normal;
     &.number {
-      text-align: right;
+      text-align: center;
       width: 115px;
     }
   }
